--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Volume Sense</string>
-    <string name="title_activity_help_menue">HelpMenue</string>
+    <string name="app_name">Smart Tune</string>
+    <string name="title_activity_help_menue">HelpMenu</string>
     <string name="title_activity_settings">Settings</string>
 
     <!-- Preference Titles -->
